# Gamma_Corrections

./: .gitignore  README.md
Inference_CPP/: CMakeLists.txt  main.cpp
Keras/Training/: Data_Creation_Pipeline.ipynb  NN.ipynb
LibTorch_Inference/: CMakeLists.txt  main.cpp
Pytorch/: Todo.md  cDataLoaders.py  models.py  test.py  train.py  validation.py  vidsToFrames.py  vids_to_frames.ipynb
Training/: Readme.md
